# record-catalog

./: Cargo.toml  README.md  database.json  settings.json  test.txt
src/: database.rs  discogs.rs  inputer.rs  main.rs
src/gui/: home.rs  mod.rs  record.rs  recordDetail.rs  record_detail.rs  render.rs  terminal.rs
src/inputer/: home.rs  inputer.rs  mod.rs  page_search.rs  recordDetail.rs  record_detail.rs
src/models/: app.rs  error.rs  home.rs  item_holder.rs  list.rs  mod.rs  query.rs  record.rs  recordDetail.rs  record_detail.rs  settings.rs
