[package]
name = "hello-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "^0.9.18"
serde = "1.0.149"
serde_json = "1.0"
tui = "0.19"
crossterm = "0.25"
tui-textarea = "*"
strum = { version = "0.21", features = ["derive"] }
chrono =  { version = "0.4.23", features = ["serde"] }



